test/corpus/if.txt
================================================================================
if statement
================================================================================
{% if x y z %}
  body
{% endif %}

{% if x y z %}
{% else %}
  body
{% endif %}
--------------------------------------------------------------------------------

(template
  (if_statement
    (expression)
    (text))
  (text)
  (if_statement
    (expression)
    (text)
    (else_statement
      (text))))

================================================================================
if statement wit elif
================================================================================
{% if x y z %}
{% elif foo %}
{% elif bar %}
{% endif %}

{% if x y z %}
{% elif foo %}
{% custom_tag %}
{% elif bar %}
{% else %}
{% endif %}
--------------------------------------------------------------------------------

(template
  (if_statement
    condition: (expression)
    body: (text)
    elif: (elif_statement
      condition: (expression)
      (text))
    elif: (elif_statement
      condition: (expression)
      (text)))
  (text)
  (if_statement
    condition: (expression)
    body: (text)
    elif: (elif_statement
      condition: (expression)
      (text)
      (custom_statement
        (custom_tag))
      (text))
    elif: (elif_statement
      condition: (expression)
      (text))
    else: (else_statement
      body: (text))))

================================================================================
nested if
================================================================================
{% if x %}
  {% if x %}{% endif %}
{% endif %}
--------------------------------------------------------------------------------

(template
  (if_statement
    condition: (expression)
    body: (text)
    body: (if_statement
      condition: (expression))
    body: (text)))

================================================================================
nested else
================================================================================
{% if x %}
{% else %}
  {% if x %}
    foo
  {% else %}
    foo
  {% endif %}
{% endif %}
--------------------------------------------------------------------------------

(template
  (if_statement
    condition: (expression)
    body: (text)
    else: (else_statement
      body: (text)
      body: (if_statement
        condition: (expression)
        body: (text)
        else: (else_statement
          body: (text)))
      body: (text))))

================================================================================
nested elif
================================================================================
{% if x %}
{% elif x %}
  {% if x %}
    foo
  {% elif x %}
    foo
  {% endif %}
{% elif x %}
  {% if x %}
    foo
  {% else %}
    foo
  {% endif %}
{% endif %}
--------------------------------------------------------------------------------

(template
  (if_statement
    condition: (expression)
    body: (text)
    elif: (elif_statement
      condition: (expression)
      (text)
      (if_statement
        condition: (expression)
        body: (text)
        elif: (elif_statement
          condition: (expression)
          (text)))
      (text))
    elif: (elif_statement
      condition: (expression)
      (text)
      (if_statement
        condition: (expression)
        body: (text)
        else: (else_statement
          body: (text)))
      (text))))
